--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@use './styles/main' as *;
+@use 'assets/styles/main' as *;
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
 
